<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/striped_shirt"
        android:icon="@drawable/pirate_shirt"
        android:title="@string/stripeshirtsFragment" />

    <item
        android:id="@+id/polo"
        android:icon="@drawable/polo"
        android:title="@string/poloFragment" />

    <item
        android:id="@+id/sweat_shorts"
        android:icon="@drawable/shorts"
        android:title="@string/sweatshortsFragment" />

    <item
        android:id="@+id/jogger_pants"
        android:icon="@drawable/trouser"
        android:title="@string/joggerpantsFragment" />

    <item
        android:id="@+id/trouser"
        android:icon="@drawable/trousers"
        android:title="@string/trousersFragment" />

</menu>