<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical"
                android:background="@drawable/user_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus"
                    android:fontFamily="monospace"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="36sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle"
                    android:fontFamily="monospace"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:textSize="18sp"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/black"
                    android:alpha=".5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:textColor="@color/white"
                        android:alpha="10"
                        android:textSize="18sp"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/missiontitle"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:fontFamily="monospace"
                    android:textSize="30sp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mission"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visiontitle"
                    android:textColor="@color/black"
                    android:fontFamily="monospace"
                    android:textSize="30sp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_gravity="center"
                    android:layout_margin="15dp" />

            <Button
                android:id="@+id/btnShopNow"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="23sp"
                android:layout_gravity="center"
                 android:text="@string/shopnow"/>

            </LinearLayout>
    </ScrollView>



</LinearLayout>