<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/container"

    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:background="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:layout_marginStart="10dp"
                android:src="@drawable/left_arrow"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse"
                android:textAllCaps="true"
                android:layout_marginTop="5dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.SearchView
                android:id="@+id/svSearchView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:searchIcon="@drawable/search_icon"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rounded_corners">
            </android.support.v7.widget.SearchView>
            <RelativeLayout
                android:id="@+id/rlCartItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <ImageButton
                    android:id="@+id/ibCart"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/cart"
                    android:background="@color/transparent"
                    android:layout_margin="1dp"/>
                <ImageView
                    android:id="@+id/ivNotificationTitle"
                    android:layout_width="55dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/notification"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginStart="30dp"
                    android:text="@string/numNotification"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:id="@+id/cvStripedShirts"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="15dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivItems"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:src="@drawable/shirt_one"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/price"
                        android:layout_margin="3dp"
                        android:fontFamily="sans-serif"
                        android:padding="7dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@color/red"
                        android:gravity="center"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/itemSizeTitle"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemSize"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/itemFabricTitle"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemFabric"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/itemRating"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:numStars="5"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize=".1"
                        style="@style/CustomHeartsRatingBar"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnAddToCart"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/addtocart"
                        android:background="@color/black"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cvStripedShirts1"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="15dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivItems1"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:src="@drawable/shirt_two"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/price"
                        android:layout_margin="3dp"
                        android:fontFamily="sans-serif"
                        android:padding="7dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@color/red"
                        android:gravity="center"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/itemSizeTitle"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemSize"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/itemFabricTitle"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemFabric"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/itemRating"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>
                    <RatingBar
                        android:id="@+id/ratingBar1"
                        android:numStars="5"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize=".1"
                        style="@style/CustomHeartsRatingBar"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnAddToCart1"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/addtocart"
                        android:background="@color/black"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>